changes to education section

--- a/index.html
+++ b/index.html
@@ -1020,8 +1020,7 @@
                   </div>
                   <ul>
                     <li>Diploma in Software Development</li>
-                    <li>Level 5 Diploma</li>
-                    <li>Grade achieved <strong>First Class Honours</strong></li>
+                    <li>Level 5 Diploma, Grade achieved <strong>First Class Honours</strong></li>
                   </ul>
                 </div>
               </div>
