try and fix background img issue

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
         <li class="bold"><a aria-label="Go to Projects section" href="#projects"
             class="waves-effect waves-dark indigo-text"><i class="mdi mdi-web small"> </i><span> Projects </span></a></li>
         <li class="bold"><a aria-label="Go to Skills section" href="#skills"
-            class="waves-effect waves-dark cyan-text"><i class="mdi mdi-cogs small"> </i><span> Skills </span></a></li>
+            class="waves-effect waves-dark cyan-text"><i class="mdi mdi-cogs small"> </i><span> Skills (FSD) </span></a></li>
+        <li class="bold"><a aria-label="Go to Skills IT section" href="#skills-it"
+            class="waves-effect waves-dark cyan-text"><i class="mdi mdi-cogs small"> </i><span> Skills (IT) </span></a></li>
         <li class="bold"><a aria-label="Go to Education section" href="#education"
             class="waves-effect waves-dark orange-text"><i class="mdi mdi-school small"> </i><span> Education </span></a></li>
         <li class="bold"><a aria-label="Go to Contact section" href="#contact"
@@ -1011,12 +1013,10 @@
               <div class="card">
                 <div class="card-content">
                   <div class="row">
-                    <div class="col s12 m2">
                       <a href="https://codeinstitute.net"
                          target="_blank"><img alt="Code Insitute logo" src="static/images/code-institute-logo.png"
                          class="responsive-img">
                       </a>
-                    </div>
                   </div>
                   <ul>
                     <li>Diploma in Software Development</li>
@@ -1030,12 +1030,10 @@
               <div class="card">
                 <div class="card-content">
                   <div class="row">
-                    <div class="col s12 m2">
                       <a href="https://www.merton.ac.uk/"
                          target="_blank"><img alt="Merton college logo" src="static/images/merton.png"
                          class="responsive-img">
                       </a>
-                    </div>
                   </div>
                   <ul>
                     <li>City and Guilds 747 in Computer Programming and Infomation Processing</li>
