Amend some skills

--- a/index.html
+++ b/index.html
@@ -713,6 +713,14 @@
                   <div class="skills-text">CA Ca7</div>
                   <div class="exp-text">Proficient<br>&nbsp;10 Years</div>
                 </div>
+                 <!-- CAPACITY MANAGEMENT -->
+                <div class="col s6 m4 l2">
+                  <a href="https://www.ca.com/content/dam/ca/us/files/service-offering/ca-capacity-management-implementation-services.pdf">
+                     <img alt="" src="static/images/ca.jpg" class="responsive-img"></img>
+                  </a>
+                  <div class="skills-text">CA Capacity Management</div>
+                  <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
+                </div>
                 <!-- MICS -->
                 <div class="col s6 m4 l2">
                   <a href="https://www.ca.com/content/dam/ca/us/files/data-sheet/ca-mics-resource-management.pdf">
@@ -848,7 +856,7 @@
                      <img alt="" src="static/images/rmf.png" class="responsive-img"></img>
                   </a>
                   <div class="skills-text">Rmf</div>
-                  <div class="exp-text">Expert<br>&nbsp;5 Years</div>
+                  <div class="exp-text">Expert<br>&nbsp;18 Years</div>
                 </div>
                 <!-- SMF -->
                 <div class="col s6 m4 l2">
@@ -856,7 +864,7 @@
                      <img alt="" src="static/images/smf.png" class="responsive-img"></img>
                   </a>
                   <div class="skills-text">Smf</div>
-                  <div class="exp-text">Expert<br>&nbsp;5 Years</div>
+                  <div class="exp-text">Expert<br>&nbsp;18 Years</div>
                 </div>
                 <!-- TDW -->
                 <div class="col s6 m4 l2">
@@ -952,7 +960,7 @@
                      <img alt="" src="static/images/z14.jpg" class="responsive-img"></img>
                   </a>
                   <div class="skills-text">System Z</div>
-                  <div class="exp-text">Expert<br>&nbsp;10 Years</div>
+                  <div class="exp-text">Expert<br>&nbsp;18 Years</div>
                 </div>
               </div>
             </div>
