icon padding changes

--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
 
 
       <!-- Contact Section -->
-      <section id="contact" class="section scrollspy">
+      <section id="contact" class="section scrollspy full-height">
         <h3 class="page-title white-text"><i class="mdi mdi-contact-mail moss-text"></i>&nbsp; Contact</h3>
         <div class="container center-align">
             <div class="col s12">
