add my protfolio to projects section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h3 class="page-title white-text"><i class="mdi mdi-human-handsup pink-text text-lighten-2"></i>&nbsp; About Me</h3>
         <div class="container flow-text">
           <blockquote>
-            <h2>An experienced and flexible IT Professional, with 37 years of IT experiance and now diving into the pond of Web development.</h2>
+            <h2>An experienced and flexible IT Professional, with 37 years of IT experience and now diving into the pond of Web development.</h2>
           </blockquote>
           <p>I have worked my whole career in IT and started working on IBM Mainframes in the 1980's as a Trainee Computer operator back in the days when paper tape & punched cards were used !!</p>
           <p>I have followed a career path thru Computer operations to my last contract role in Brussels which ended in 2017</p>
@@ -108,12 +108,12 @@
             <div class="card-content">
               <div class="row">
                 <div class="col s12 m2"><a href="https://codeinstitute.net"
-                  target="_blank"><img alt="Code Insitute logo" src="static/images/code-institute-logo.png"
+                  target="_blank"><img alt="Code Insitute logo" src="static/images/code-institute-logo1.png"
                   class="responsive-img center-block"></a>
                 </div>
               </div>
               <div class="role waterfall-text">Full-Stack Software Developer (Training)</div>
-              <p><em class="grey-text">The Full stack Web Developer course is a university accredited diploma</em></p>
+              <p><em class="grey-text">The Full stack Web Developer course is a university accredited diploma.</em></p>
               <ul>
                 <li>Agile Development, Data Analytics, Data Management, Frameworks, Html5, Css3, GitHub, JavaScript, MongoDB, Python (Django Framework)</li>
                 <li>An intensive coding course created and validated by the tech industry experts and rated by Edingburgh Naiper University.</li>
@@ -391,7 +391,33 @@
                 </div>
               </div>
             </div>
+
+            <!-- My Portfolio -->
+            <div class="col s12 m6 l4">
+              <div class="card medium">
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img alt="Screenshot of My Portfolio app" src="static/images/My-Portfolio.png" class="activator">
+                </div>
+                <div class="card-content"><span class="card-title activator waterfall-text hoverline">My Portfolio<i class="mdi-navigation-more-vert right"></i></span>
+                  <p>My Portfolio Project.</p>
+                </div>
+                <div class="card-reveal"><span class="card-title waterfall-text">Accomplishments<i class="mdi-navigation-close right"></i></span>
+                  <ul>
+                    <li><strong>Materialize</strong>&nbsp; UI component library created with CSS, JavaScript, and HTML.</li>
+                  </ul>
+                  <div class="card-action center-align">
+                    <a aria-label="View my portfolio web app" href="https://bennettpe.github.io/my-portfolio/"
+                       data-position="top" data-tooltip="View Project"
+                       class=" btn-floating btn-large waves-effect waves-light tooltipped"><i class="fas fa-globe"></i></a>
+                    <a aria-label="View the GitHub repo for milestone 5 project" href="https://github.com/bennettpe/my-portfolio"
+                       data-position="top" data-tooltip="View GitHub Repo"
+                       class="btn-floating btn-large waves-effect waves-light tooltipped"><i class="fab fa-github"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
+
         </div>
       </section>
 
