padding for lt 600px

--- a/index.html
+++ b/index.html
@@ -909,6 +909,7 @@
         </div>
       </section>
 
+      <!-- Projects Section -->
       <section id="projects" class="section scrollspy">
         <h3 class="page-title white-text"><i class="mdi mdi-web indigo-text"></i>&nbsp; Projects</h3>
         <div class="container">
@@ -1093,6 +1094,7 @@
         </div>
       </section>
 
+      <!-- Education Section -->
       <section id="education" class="section scrollspy">
         <h3 class="page-title white-text"><i class="mdi mdi-school orange-text"></i>&nbsp; Education</h3>
         <div class="container">
