changes to title

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 
 <head>
-  <title> Paul Bennett Portfolio - Full Stack Web Developer / IT Consultant </title>
+  <title> Paul Bennett Portfolio - Junior Full Stack Web Developer / IT Consultant </title>
   <!-- Required mega tags                                --> <meta charset="utf-8">
   <!-- Required mega tags                                --> <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- BOOTSTRAP minified CSS file (v4.3.1)                  <link rel="stylesheet" href="static/vendors/bootstrap/css/bootstrap.min.css"> -->
   <!-- MATERIALIZE minified CSS file (v0.95.3)           --> <link rel="stylesheet" href="static/vendors/materialize/css/materialize.css">
   <!-- FONTAWESOME minified CSS file (v5.8.1)            --> <link rel="stylesheet" href="static/vendors/fontawesome-free/css/all.css">
   <!-- MATERIAL DESIGN ICONS minified CSS file (v3.7.95) --> <link rel="stylesheet" href="static/vendors/materialdesignicons/css/materialdesignicons.css">
@@ -79,7 +78,7 @@
           <div class="container hide-on-med-and-down">
             <div class="intro-text-background">
               <h2 class="name">Paul Bennett</h2>
-              <p class="title">Full-Stack Developer / IT Consultant</p>
+              <p class="title">Junior Full-Stack Developer / IT Consultant</p>
             </div>
           </div>
         </div>
