backout bootstrap accordion changes

--- a/index.html
+++ b/index.html
@@ -101,100 +101,101 @@
       <section id="skills" class="section scrollspy">
         <h3 class="page-title white-text"><i class="mdi mdi-cogs cyan-text"></i>&nbsp; SKILLS (FSD)</h3>
         <div class="container">
-
           <div class="card">
             <div class="card-content">
               <h4 class="thundercloud-text light">Languages</h4>
               <div class="row center-align">
 
-                <!-- CSS3 -->
-                <div class="col s6 m4 l2">
-                    <a href="https://www.w3.org/Style/CSS/Overview.en.html">
-                      <img alt="" src="static/images/css3.png" class="responsive-img"></img>
-                    </a>
-                    <div class="skills-text">Css3</div>
-                    <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
-                </div>
-                <!-- HTML5 -->
-                <div class="col s6 m4 l2 skills-icon">
+              <!-- CSS3 -->
+              <div class="col s6 m4 l2">
+                  <a href="https://www.w3.org/Style/CSS/Overview.en.html">
+                  <img alt="" src="static/images/css3.png" class="responsive-img"></img>
+                  </a>
+                  <div class="skills-text">Css3</div>
+                  <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
+              </div>
+              <!-- HTML5 -->
+              <div class="col s6 m4 l2 skills-icon">
                   <a href="https://www.w3.org/TR/html52/">
-                    <img alt="" src="static/images/html5.png" class="responsive-img"></img>
+                  <img alt="" src="static/images/html5.png" class="responsive-img"></img>
                   </a>
                   <div class="skills-text">Html5</div>
                   <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
-                </div>
-                <!-- JAVASCRIPT -->
-                <div class="col s6 m4 l2">
+              </div>
+              <!-- JAVASCRIPT -->
+              <div class="col s6 m4 l2">
                   <a href="https://www.javascript.com/">
-                     <img alt="" src="static/images/javascript.png" class="responsive-img"></img>
+                  <img alt="" src="static/images/javascript.png" class="responsive-img"></img>
                   </a>
                   <div class="skills-text">Javascript</div>
                   <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
-                </div>
-                <!-- PYTHON -->
-                <div class="col s6 m4 l2">
+              </div>
+              <!-- PYTHON -->
+              <div class="col s6 m4 l2">
                   <a href="https://www.python.org/">
-                     <img alt="" src="static/images/python.png" class="responsive-img"></img>
+                  <img alt="" src="static/images/python.png" class="responsive-img"></img>
                   </a>
                   <div class="skills-text">Python</div>
                   <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
-                </div>
-                <!-- SASS -->
-                <div class="col s6 m4 l2 skills-icon">
+              </div>
+              <!-- SASS -->
+              <div class="col s6 m4 l2 skills-icon">
                   <a href="https://sass-lang.com/">
-                     <img alt="" src="static/images/sass.png" class="responsive-img"></img>
+                  <img alt="" src="static/images/sass.png" class="responsive-img"></img>
                   </a>
                   <div class="skills-text">Sass</div>
                   <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
-                </div>
-                <!-- SQL -->
-                <div class="col s6 m4 l2">
+              </div>
+              <!-- SQL -->
+              <div class="col s6 m4 l2">
                   <a href="https://en.wikipedia.org/wiki/SQL">
-                     <img alt="" src="static/images/sql.png" class="responsive-img"></img>
+                  <img alt="" src="static/images/sql.png" class="responsive-img"></img>
                   </a>
                   <div class="skills-text">Sql</div>
                   <div class="exp-text">Intermediate<br>&nbsp;2 Years</div>
-                </div>
               </div>
+
             </div>
           </div>
+        </div>
 
           <div class="card">
             <div class="card-content">
-              <h4 class="thundercloud-text light">Databases</h4>
+              <h4 class="thundercloud-text light">Database</h4>
               <div class="row center-align">
 
-                <!-- MONGODB -->
-                <div class="col s6 m4 l2">
-                  <a href="https://www.mongodb.com/">
-                     <img alt="" src="static/images/mongodb.png" class="responsive-img"></img>
-                  </a>
-                  <div class="skills-text">MongoDB</div>
-                  <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
-                </div>
-                <!-- POSTGRESQL -->
-                <div class="col s6 m4 l2">
-                  <a href="https://www.postgresql.org/">
-                     <img alt="" src="static/images/postgresql.png" class="responsive-img"></img>
-                  </a>
-                  <div class="skills-text">PostgreSQL</div>
-                  <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
-                </div>
-                <!-- SQLITE -->
-                <div class="col s6 m4 l2">
-                  <a href="https://www.sqlite.org/index.html">
-                     <img alt="" src="static/images/sqlite.jpg" class="responsive-img"></img>
-                  </a>
-                  <div class="skills-text">Sqlite</div>
-                  <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
-                </div>
+              <!-- MONGODB -->
+              <div class="col s6 m4 l2">
+                <a href="https://www.mongodb.com/">
+                <img alt="" src="static/images/mongodb.png" class="responsive-img"></img>
+                </a>
+                <div class="skills-text">MongoDB</div>
+                <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
+              </div>
+              <!-- POSTGRESQL -->
+              <div class="col s6 m4 l2">
+                <a href="https://www.postgresql.org/">
+                <img alt="" src="static/images/postgresql.png" class="responsive-img"></img>
+                </a>
+                <div class="skills-text">PostgreSQL</div>
+                <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
+              </div>
+              <!-- SQLITE -->
+              <div class="col s6 m4 l2">
+                <a href="https://www.sqlite.org/index.html">
+                <img alt="" src="static/images/sqlite.jpg" class="responsive-img"></img>
+                </a>
+                <div class="skills-text">Sqlite</div>
+                <div class="exp-text">Intermediate<br>&nbsp;1 Year</div>
+              </div>
+
               </div>
             </div>
           </div>
 
           <div class="card">
             <div class="card-content">
-              <h4 class="thundercloud-text light">Data Visualization</h4>
+              <h4 class="thundercloud-text light">Data Visulization</h4>
               <div class="row center-align">
 
                 <!-- CHART.JS -->
@@ -395,6 +396,7 @@
             </div>
           </div>
 
+        </div>
         </div>
       </section>
 
@@ -1160,6 +1162,7 @@
 
   <!-- SCRIPT -->
   <!-- JQuery minified Javascript file (v1.11.3)      --> <script src="static/vendors/jquery/js/jquery.js"></script>
+  <!-- POPPER JavaScript minified file (v1.14.7)      --> <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <!-- Materialize minified Javascript file (v0.95.3) --> <script src="static/vendors/materialize/js/materialize.js"></script>
   <!-- Custom JavaScript for this template            --> <script src="static/js/custom.js"></script>
 
