Commit styling changes to Skils(JFSD) section

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <h3 class="page-title white-text"><i class="mdi mdi-cogs cyan-text"></i>&nbsp; SKILLS (FSD)</h3>
       <div class="container">
         <ul class="collapsible" data-collapsible="accordion">
+            <!-- Skills (Junior Full-Stack Developer) Languages Section -->
             <li>
                 <div class="collapsible-header">
                     <h4 class="thundercloud-text light">Languages</h4>
@@ -161,7 +162,7 @@
                     </div>
                 </div>
             </li>
-
+            <!-- Skills (Junior Full-Stack Developer) Database Section -->
             <li>
                 <div class="collapsible-header">
                     <h4 class="thundercloud-text light">Database</h4>
@@ -197,7 +198,7 @@
                     </div>
                 </div>
             </li>
-
+            <!-- Skills (Junior Full-Stack Developer) Data Visulization Section -->
             <li>
                 <div class="collapsible-header">
                     <h4 class="thundercloud-text light">Data Visulization</h4>
@@ -249,7 +250,7 @@
                     </div>
                 </div>
             </li>
-
+            <!-- Skills (Junior Full-Stack Developer) Frameworks Section -->
             <li>
                 <div class="collapsible-header">
                     <h4 class="thundercloud-text light">Frameworks</h4>
@@ -309,7 +310,7 @@
                     </div>
                 </div>
             </li>
-
+            <!-- Skills (Junior Full-Stack Developer) Other Section -->
             <li>
                 <div class="collapsible-header">
                     <h4 class="thundercloud-text light">Other</h4>
