Increase transition time to 0.7s to Skils(JFSD) section

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <div class="collapsible-header">
                     <h4 class="thundercloud-text light">Data Visulization</h4>
                 </div>
-                <div class="collapsible-body">
+                <div class="card collapsible-body">
                     <div class="card-content">
                         <div class="row center-align">
                             <!-- CHART.JS -->
@@ -255,7 +255,7 @@
                 <div class="collapsible-header">
                     <h4 class="thundercloud-text light">Frameworks</h4>
                 </div>
-                <div class="collapsible-body">
+                <div class="card collapsible-body">
                     <div class="card-content">
                         <div class="row center-align">
                             <!-- BOOTSTRAP -->
@@ -315,7 +315,7 @@
                 <div class="collapsible-header">
                     <h4 class="thundercloud-text light">Other</h4>
                 </div>
-                <div class="collapsible-body">
+                <div class="card collapsible-body">
                     <div class="card-content">
                         <div class="row center-align" style="justify-content: flex-start">
                             <!-- AWS CLOUD9 -->
