Add chevron icons to Skils(JFSD) section

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <!-- Skills (Junior Full-Stack Developer) Languages Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light">Languages</h4>
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle red-text"></i>Languages</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -165,7 +165,7 @@
             <!-- Skills (Junior Full-Stack Developer) Database Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light">Database</h4>
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle-outline"></i>Database</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -201,7 +201,7 @@
             <!-- Skills (Junior Full-Stack Developer) Data Visulization Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light">Data Visulization</h4>
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle-outline"></i>Data Visulization</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -253,7 +253,7 @@
             <!-- Skills (Junior Full-Stack Developer) Frameworks Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light">Frameworks</h4>
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle-outline"></i>Frameworks</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -313,7 +313,7 @@
             <!-- Skills (Junior Full-Stack Developer) Other Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light">Other</h4>
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle-outline"></i>Other</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
