--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             class="waves-effect waves-dark orange-text"><i class="mdi mdi-school small"> </i><span> Education </span></a></li>
         <li class="bold"><a aria-label="Go to Contact section" href="#contact"
             class="waves-effect waves-dark moss-text"><i class="mdi mdi-contact-mail small"> </i><span> Contact </span></a></li>
-        <li class="bold"><a aria-label="Go to My Cv long" href="https://drive.google.com/open?id=1u3H7dH4r9Eb-xjVMB5Wz15K5k8wt25wqb65RsgAtz5w" target="_blank"
+        <li class="bold"><a aria-label="Go to My Cv long" href="https://docs.google.com/document/d/1Hb1kjz5SLEjDtfbXfmrqX71EviDz3p9BoSXBcE0t_Qg" target="_blank"
             class="waves-effect waves-dark teal-text"><i class="mdi mdi-file-document small"> </i><span> Cv (Long) </span></a></li>
-        <li class="bold"><a aria-label="Go to My Cv short" href="https://drive.google.com/open?id=1lsMYKcXcoZAp41nYOLJ4ZYY01U2W9I7x6ORqFsihTNE" target="_blank"
+        <li class="bold"><a aria-label="Go to My Cv short" href="https://docs.google.com/document/d/1amn5R7lpVAL0zJqgoh5wb6_RoC5CpDXvJPqlmSXxCaY" target="_blank"
             class="waves-effect waves-dark teal-text"><i class="mdi mdi-file-document small"> </i><span> Cv (Short) </span></a></li>
       </ul>
     </nav>
@@ -105,7 +105,7 @@
             <!-- Skills (Junior Full-Stack Developer) Languages Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle red-text"></i>Languages</h4>
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle cyan-text"></i>Languages</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -165,7 +165,7 @@
             <!-- Skills (Junior Full-Stack Developer) Database Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle-outline"></i>Database</h4>
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle red-text"></i>Database</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -201,7 +201,7 @@
             <!-- Skills (Junior Full-Stack Developer) Data Visulization Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle-outline"></i>Data Visulization</h4>
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle red-text"></i>Data Visulization</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -253,7 +253,7 @@
             <!-- Skills (Junior Full-Stack Developer) Frameworks Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle-outline"></i>Frameworks</h4>
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle red-text"></i>Frameworks</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -313,7 +313,7 @@
             <!-- Skills (Junior Full-Stack Developer) Other Section -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle-outline"></i>Other</h4>
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle red-text"></i>Other</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
