change fontsize and chevron in Education section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <!-- Skills (Junior Full-Stack Developer) Section -->
     <section id="skills" class="section scrollspy">
-      <h3 class="page-title white-text"><i class="mdi mdi-cogs cyan-text"></i>&nbsp; SKILLS (FSD)</h3>
+      <h3 class="page-title white-text"><i class="mdi mdi-cogs cyan-text"></i>&nbsp; Skills (JFSD)</h3>
         <div class="container">
           <ul class="collapsible" data-collapsible="accordion">
             <!-- Skills (Junior Full-Stack Developer) Languages Section -->
@@ -417,7 +417,7 @@
 
     <!-- Skills (IT) Section -->
     <section id="skills-it" class="section scrollspy">
-      <h3 class="page-title white-text"><i class="mdi mdi-cogs cyan-text"></i>&nbsp; SKILLS (IT)</h3>
+      <h3 class="page-title white-text"><i class="mdi mdi-cogs cyan-text"></i>&nbsp; Skills (IT)</h3>
         <div  class="container">
           <ul class="collapsible" data-collapsible="accordion">
             <!-- Skills (IT Consultant) CA Technologies Section -->
@@ -994,7 +994,7 @@
             <ul class="collapsible" data-collapsible="accordion">
               <li>
                 <div class="collapsible-header">
-                  <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle cyan-text"></i>Full-Stack Web Developer (Training)</h4>
+                  <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle grey-text"></i>Full-Stack Web Developer (Training)</h4>
                 </div>
                   <div class="card collapsible-body">
                     <div class="card-content">
@@ -1019,7 +1019,7 @@
               <!-- Euroclear card -->
               <li>
                 <div class="collapsible-header">
-                  <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle cyan-text"></i>Capacity Management Infrastructure Consultant</h4>
+                  <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle grey-text"></i>Capacity Management Infrastructure Consultant</h4>
                 </div>
                   <div class="card collapsible-body">
                     <div class="card-content">
@@ -1049,7 +1049,7 @@
             <!-- Cpt global card -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle cyan-text"></i>Performance Tuning Technical Consultant</h4>
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle grey-text"></i>Performance Tuning Technical Consultant</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -1076,7 +1076,7 @@
             <!-- JPmorgan card -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle cyan-text"></i>IT Capacity Planning / Performance Management Specialist</h4>
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle grey-text"></i>IT Capacity Planning / Performance Management Specialist</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -1111,7 +1111,7 @@
             <!-- Chase card -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle cyan-text"></i>Senior Operations / Operations Analyst</h4>
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle grey-text"></i>Senior Operations / Operations Analyst</h4>
                 </div>
                 <div class="card collapsible-body">
                     <div class="card-content">
@@ -1139,7 +1139,7 @@
             <!-- Council card -->
             <li>
                 <div class="collapsible-header">
-                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-right-circle cyan-text">
+                    <h4 class="thundercloud-text light"><i class="mdi mdi-chevron-up-circle grey-text">
                     </i>Operations Analyst / Shift Leader / Operator / Trainee Operator</h4>
                 </div>
                 <div class="card collapsible-body">
